# digital_clock

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/agents/: security-vuln-auditor.agent.md  test-writer.agent.md
.github/skills/add-feature/: SKILL.md
.github/workflows/: ci.yml
core/: clock_logic.py  container.py  events.py  observer.py  url_validator.py
reports/: security-scan-2026-03-24.md
services/: config_service.py  hourly_web_service.py  keyboard_service.py  pause_manager.py  pomodoro_service.py  reminder_service.py
strategies/: base.py  hourly_web_strategy.py  pomodoro_strategy.py  reminder_strategy.py
tests/: test_clock_logic_observer.py  test_config_manager.py  test_config_snapshot.py  test_hourly_web_service.py  test_hourly_web_strategy.py  test_keyboard_service.py  test_pause_manager.py  test_pomodoro_service.py  test_pomodoro_strategy.py  test_reminder_service.py  test_reminder_strategy.py  test_url_validator.py
ui/: hourly_web_window.py  main_window.py  popup_utils.py  reminder_window.py
ui/menus/: context_menu.py  reminder_menu.py
